# MarkURLdown

./: .cursorignore  .cursorrules  .gitignore  GEMINI.md  MarkItDown.vbs  MarkURLdown.pyw  MarkURLdown.vbs  MarkdownAll.vbs  README.md  RISK_CONTROL.md  TESTING_STRATEGY.md  diagnose_detailed.py  pyproject.toml  requirements.txt  test_advanced_settings.py  test_conversion.py  test_functionality.py  test_gui_conversion.py  test_gui_simple.py  test_real_config.py  test_report.json
.github/workflows/: release.yml
docs/: Filtering_NonContent.md  HANDLER_DEVELOPMENT_GUIDE.md  LOGGER_ARCHITECTURE_GUIDE.md  PROJECT_RENAME_GUIDE.md  SRC_MIGRATION_PLAN.md  STARTUP_OPTIMIZATION.md  Testing_Guide.md  Version_management_guide.md  changelog.md  general_batch_replace.vim  new_site_handler_template.py
docs/Archive/: CRAWLER_DESIGN_GUIDE.md  PROJECT_RENAME_GUIDE.md  RefactorPlan.md  SRC_MIGRATION_PLAN.md
docs/GUI_Refactor_Plan/: About_Page_Design.md  Advanced_Page_Design.md  CommandPanel_Design.md  GUI_Refactor_Plan.md  Log_Integration_Analysis.md  Multi_Task_Logging_Design.md  Splitter_Linkage_Design.md
docs/analysis/: MarkdownAll_Splitter_Design.md  MdxScraper_Splitter_Analysis.md  startup_flow_analysis.md
markitdown_app/: __init__.py  app_types.py  types.py  version.py
markitdown_app/app/: main_pyside.py  main_tk.py
markitdown_app/core/: common_utils.py  filename.py  html_to_md.py  images.py  normalize.py  registry.py  url_converter.py  weixin_handler.py
markitdown_app/io/: config.py  logger.py  session.py  writer.py
markitdown_app/services/: convert_service.py  playwright_driver.py
markitdown_app/ui/: viewmodel.py
scripts/: release.py
src/markdownall/: app_types.py  launch.py  version.py
src/markurldown/: app_types.py  launch.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py
tests/gui/: test_components.py  test_integration.py  test_managers.py  test_pages.py  test_user_acceptance.py
tests/test_core/: test_common_utils.py  test_filename.py  test_html_to_md_elements.py  test_html_to_md_fallback.py  test_images_async_timeouts_and_dedup.py  test_images_async_wrapper.py  test_images_dedup_and_resequence.py  test_images_download_single.py  test_images_failure_and_github.py  test_images_headers_injection_failure.py  test_images_internals.py  test_images_more_cases.py  test_images_resequence_missing_files.py  test_images_rewrite_success_only.py  test_images_should_detect_branch.py  test_images_url_headers_and_format.py  test_normalize.py  test_normalize_edge_cases.py  test_normalize_more_edges.py  test_registry_convert_flow.py  test_registry_edges.py  test_registry_shared_browser.py  test_registry_url_patterns.py  test_version_extras.py  test_version_module.py
tests/test_handlers/: __init__.py  test_appinn_handler.py  test_appinn_handler_cases.py  test_appinn_internal_functions.py  test_appinn_playwright.py  test_appinn_strategies.py  test_fetch_smoke.py  test_generic_all_fail.py  test_generic_handler.py  test_generic_handler_cases.py  test_generic_prefilter_cases.py  test_generic_strategies.py  test_handlers_blocked_and_content.py  test_nextjs_clean_normalize.py  test_nextjs_handler.py  test_nextjs_handler_cases.py  test_nextjs_internal_functions.py  test_nextjs_playwright.py  test_nextjs_strategies.py  test_process_smoke.py  test_sspai_handler.py  test_sspai_handler_cases.py  test_sspai_internal_functions.py  test_sspai_playwright.py  test_sspai_strategies.py  test_weixin_fetch_function.py  test_weixin_handler.py  test_weixin_handler_cases.py  test_weixin_internal_functions.py  test_weixin_playwright.py  test_weixin_strategies.py  test_wordpress_handler.py  test_wordpress_handler_cases.py  test_wordpress_internal_functions.py  test_wordpress_playwright_independent.py  test_wordpress_strategies.py  test_zhihu_goto_and_fetch.py  test_zhihu_handler.py  test_zhihu_handler_cases.py  test_zhihu_internal_functions.py  (+1 more)
tests/test_integration/: test_conversion_flow.py  test_end_to_end.py  test_end_to_end_mocked.py  test_gui_version_integration.py  test_handler_integration.py
tests/test_io/: __init__.py  test_config_io.py  test_logger_errors.py  test_path_helpers.py  test_writer_session_logger.py
tests/test_performance/: test_conversion_performance.py  test_memory_usage.py
tests/test_services/: __init__.py  conftest.py  test_config_manager.py  test_config_service.py  test_convert_service.py  test_convert_service_adapter.py  test_convert_service_core.py  test_convert_service_logger.py  test_convertservice_emit.py  test_convertservice_run_threading.py  test_convertservice_worker_emit_detail.py  test_convertservice_worker_emit_detail_types.py  test_convertservice_worker_extras.py  test_convertservice_worker_finally_and_effective_shared.py  test_convertservice_worker_flow.py  (+4 more)
(+98 files in other folders)
