[project]
name = "MarkURLdown"
version = "0.1.0"
description = "Scraping web pages and convert to clean, readable Markdown files."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "MarkURLdown" }
]
dependencies = [
  # Core HTML → Markdown conversion engine
  "markitdown>=0.1.3",
  # HTTP client for basic web requests
  "requests>=2.32.0",
  # HTML parsing and content extraction
  "beautifulsoup4>=4.13.0",
  # Fast XML/HTML parser
  "lxml>=5.3.0",
  # Modern HTTP/2 client for high-performance requests
  "httpx>=0.28.0",
  # Browser automation for complex anti-bot scenarios
  "playwright>=1.55.0",
  # Asynchronous HTTP client for concurrent image downloads
  "aiohttp>=3.12.0",
  # GUI Framework
  "PySide6>=6.9.0",
]

[project.urls]
Homepage = "https://github.com/VimWei/MarkURLdown"
Repository = "https://github.com/VimWei/MarkURLdown"