[project]
name = "MarkdownAll"
version = "1.0.3"
description = "Convert webpage or file to clean, readable Markdown files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0" }
authors = [
  { name = "VimWei" }
]
dependencies = [
  "markitdown>=0.1.3",
  "requests>=2.32.0",
  "beautifulsoup4>=4.13.0",
  "lxml>=5.3.0",
  "httpx>=0.28.0",
  "playwright>=1.55.0",
  "aiohttp>=3.12.0",
  "PySide6>=6.9.0",
  "pytest-cov>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/VimWei/MarkdownAll"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["markdownall*"]
exclude = ["log*", "output*", "sessions*", "tests*", "docs*"]

[project.scripts]
markdownall = "markdownall.launch:main"

[dependency-groups]
dev = [
    'pytest>=8.3.0',
    'black>=24.8.0',
    'isort>=5.13.2',
    'mypy>=1.11.2',
    'pre-commit>=3.8.0',
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "tests/.pytest_cache"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "-m",
    "not service"
]
markers = [
    "slow: 标记为慢速测试",
    "integration: 标记为集成测试",
    "unit: 标记为单元测试",
    "handler: 标记为处理器测试",
    "service: 标记为服务层测试",
    "timeout: 标记超时用例"
]

[tool.coverage.run]
source = ["markdownall"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*"
]
data_file = "tests/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.coverage.html]
directory = "tests/htmlcov"
